# ai-ops-chat

./: .env.example  README.md  pyproject.toml  rca_output.html  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  style.css
src/ai_ops_chat/: __init__.py  agent_runner.py  api.py  chroma_manager.py  config.py  embeddings.py  ingest_state.py  main.py  parser.py  tools.py  watcher.py
tests/: test_parser.py  test_watcher.py
